# list

./: CMakeLists.txt
build-src-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  src
build-src-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-d67943ca1c38d22361c2.json  codemodel-v2-dabf87f9b8f625b3d0a9.json  index-2022-04-06T11-28-29-0758.json  target-src-Debug-5b7efa28a9ec328b7b0a.json
build-src-Desktop-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-5bc023d3b2aa8cdc4e4f.json  codemodel-v2-2d5057180fc299fa697e.json  index-2022-04-06T11-28-11-0708.json  target-src-Debug-501a6681914e5584c252.json
build-test-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  test
build-test-Desktop-Debug/.cmake/api/v1/reply/: codemodel-v2-9d4120016fbb5ff29869.json  index-2022-04-06T11-32-01-0692.json  target-test-Debug-9ae844c482ed48980617.json
build-test-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-dce483aaa925c66bcbff.json  cmakeFiles-v1-e9603afe508b53aeaf62.json  codemodel-v2-a709f51433e72683297d.json  index-2022-04-06T11-31-46-0548.json  target-test-Debug-30268f14226e62671635.json
src/: CMakeLists.txt  list.cpp  list.h  main.cpp
test/: CMakeLists.txt  main.cpp  test.cpp  test.h
